# nix-disksetup

./: default.nix  readme.md  volumesetup.nix
code/: Cargo.toml  module.nix  package.nix
rust/src/: main.rs
source/: Cargo.toml  lib.nix  module.nix  package.nix
source/src/: blockdev.rs  config.rs  fs_bcachefs.rs  main.rs  util.rs
