[package]
name = "volumesetup"
version = "0.1.0"
edition = "2021"

[features]
smartcard = [
    "dep:card-backend",
    "dep:card-backend-pcsc",
    "dep:pcsc",
    "dep:pgp",
    "dep:openpgp-card-rpgp",
]
default = ["smartcard"]

[dependencies]
aargvark = { version = "0.6", features = ["serde_json"] }
flowcontrol = { version = "0.2" }
loga = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Feature smartcard
pcsc = { version = "2", optional = true }
pgp = { version = "0.13", optional = true }
openpgp-card-rpgp = { version = "0.1", optional = true }
card-backend = { version = "0.2", optional = true }
card-backend-pcsc = { version = "0.5", optional = true }
rand = "0.8"
openpgp-card = "0.5"
bstr = "1"
path-absolutize = "3"
sequoia-openpgp = "1"
structre = "0.2"
